2003-08-28  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gdk/Pixbuf.custom: Added missing DllImport statement and
	proper copyright header.
	* sources/Gtk.metadata: Fixed new_flag rules, they did not
	get applied to the gtk-api.xml.

2003-08-28  Alp Toker  <alp@atoker.com>

	* glue/style.c: glue and corresponding .custom entries for
	TextGC

2003-08-26  John Luke  <jluke@cfl.rr.com>

	* gtk/ThreadNotify.cs: mark dllimported methods private

2003-08-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gconf/GConf/Value.cs: implemented support for lists.

	* glib/ListBase.cs: implemented the IDisposable stuff and created a
	new method, FreeList, to free the list when needed.

	* glade/HandlerNotFoundException.cs: make it derive from
	SystemException. Don't override Message, the message is created in the
	.ctor.

2003-08-26  Alp Toker  <alp@atoker.com>

	* glue/style.c: glue and corresponding .custom entries for
	BaseGC, plus the ability to set GCs

2003-08-21  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gnomeprint: 
	* api/gnomeprint-api.xml: Removed, gnomeprint is now included
	in gnome.

2003-08-19  John Luke  <jluke@cfl.rr.com>

	* glib/ListBase.cs:  Add convenience .Append (string) method

2003-08-19  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* generator/Method.cs: Fixed bug where all ToString methods
	was marked as override, this is only correct if the ToString
	method does not have any parameters.

2003-08-18  Aleksey Sanin  <aleksey@aleksey.com>

	* generator/SignalHandler.cs : take refs on GObject sig parms.

2003-08-15  Duncan Mak  <duncan@ximian.com>

	* sources/Gtk.metadata (Gtk.TreeView.CellArea): Apply patch from
	Aleksey Sanin <aleksey@aleksey.com> to declare the "Gdk.Rectangle
	rect" parameter as an out parameter. This is required because
	Gdk.Rectangle is a struct.

2003-08-14  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/Gnome.metadata: Renamed use of keyword base to Base 
	in GnomePrintUnit method GetIdentity.