@@ -4,6 +4,10 @@
 	proper copyright header.
 	* sources/Gtk.metadata: Fixed new_flag rules, they did not
 	get applied to the gtk-api.xml.
+	* generator/Parameters.cs:
+	* generator/StructBase.cs:
+	* generator/SymbolTable.cs: Fixed the keyword base was not 
+	mangled, also did a little refactoring.
 
 2003-08-28  Alp Toker  <alp@atoker.com>
 
